--- a/Heart Disease UCI Dataset/Heart Disease Challenge.ipynb
+++ b/Heart Disease UCI Dataset/Heart Disease Challenge.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Those datasets give a number of variables along with a target condition of having or not having heart disease. The goal of this alayses is to find the major factors that have an impact over the health of people, because \n",
+    "Those datasets give a number of variables along with a target condition of having or not having heart disease. The goal of this alnalysis is to find the major factors that have an impact over the health of people, because \n",
     "understanding the risks will help to prevent a heart attack.\n",
     "\n",
     "According to this [source](https://www.heart.org/en/health-topics/heart-attack/understand-your-risks-to-prevent-a-heart-attack), the more risk factors you have, and the greater the degree of each risk factor, the higher your chance of developing coronary heart disease – a common term for the buildup of plaque in the heart’s arteries that could lead to heart attack. \n",
